# folio

./: COMPLETION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  OVERVIEW.md  README.md  demo.py  meson.build  meson_options.txt  pyproject.toml  requirements.txt  run.py  setup.py  simple_test.py  test_app.py  test_comprehensive.py  test_features.py  test_simple.py
.tx/: config
data/: gschemas.compiled  meson.build  se.danielnylander.folio.desktop  se.danielnylander.folio.gschema.xml  se.danielnylander.folio.metainfo.xml  style.css
flatpak/: se.danielnylander.folio.json
po/: POTFILES.in  de.po  es.po  folio.pot  fr.po  it.po  ja.po  ko.po  meson.build  nl.po  pl.po  pt_BR.po  sv.po  sv.po~  zh_CN.po
po/sv/LC_MESSAGES/: folio.mo
src/: __init__.py  application.py  book_parser.py  launcher.py.in  library.py  main.py  meson.build  reader.py  settings.py  tts.py  user_data.py  utils.py  window.py
