[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "folio"
version = "1.0.0"
description = "Modern e-book reader with TTS support"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Daniel Nylander", email = "daniel@danielnylander.se"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Topic :: Text Processing"
]
keywords = ["ebook", "epub", "pdf", "reader", "gtk", "tts", "piper"]
requires-python = ">=3.8"
dependencies = [
    "PyGObject>=3.42",
    "ebooklib>=0.18",
    "PyMuPDF>=1.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.910"
]

[project.scripts]
folio = "folio.main:main"

[project.urls]
Homepage = "https://github.com/yeager/folio"
Repository = "https://github.com/yeager/folio.git"
Issues = "https://github.com/yeager/folio/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.po", "*.pot", "*.desktop", "*.xml", "*.gschema.xml"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true